src/objects/Promoter_io_Callout_Session__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Batches__c</fullName>
        <label>Number of Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Start_Time__c</fullName>
        <label>Session Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Promoter.io Callout Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Count__c</columns>
        <columns>Errors__c</columns>
        <columns>Number_of_Batches__c</columns>
        <columns>Session_Start_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCS-{00000000}</displayFormat>
        <label>Promoter.io Callout Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter.io Callout Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>